--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
     "ogl": "^1.0.11",
+    "p-limit": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
