--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
     "lenis": "^1.1.20",
+    "lucide-react": "^0.477.0",
     "ogl": "^1.0.11",
     "p-limit": "^6.2.0",
     "react": "^18.3.1",
@@ -23,6 +24,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.10",
     "web-vitals": "^2.1.4"
