--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.3.0",
     "react-loading-skeleton": "^3.4.0",
     "react-scripts": "5.0.1",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
