--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.3",
     "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
+    "hls.js": "^1.6.0",
     "lenis": "^1.1.20",
     "lucide-react": "^0.477.0",
     "ogl": "^1.0.11",
