--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.3",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.4.2",
     "gsap": "^3.12.7",
     "hls.js": "^1.6.0",
